tests/NormalTests/paczka1/fuzzy1/13761584.err
Error in line 12: 1jnXBzjh S65 494,8
Error in line 17: A325 S65 42,3
Error in line 21: A325 S65 54,0
Error in line 35: sdvT S484 69,4
Error in line 36: sdvT S596 7,1
